// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Henvisning  > rendrer henvisning til apotekerne 1`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <section
        aria-live="polite"
        class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
        data-testid="henvisning"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          error.du_kan_ikke_bruke_enkel_kalkulator
        </h2>
        <p
          class="_ingress_789545 navds-body-long navds-body-long--large"
        >
          henvisning.apotekerne.body
        </p>
        <button
          class="_button_789545 navds-button navds-button--primary navds-button--medium"
          data-testid="card-button-primary"
          type="button"
        >
          <span
            class="navds-label"
          >
            henvisning.detaljert_kalkulator
          </span>
        </button>
        <button
          class="_button_789545 navds-button navds-button--secondary navds-button--medium"
          data-testid="card-button-secondary"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Henvisning  > rendrer henvisning til foedselsdato 1`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <section
        aria-live="polite"
        class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
        data-testid="henvisning"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          error.du_kan_ikke_bruke_enkel_kalkulator
        </h2>
        <p
          class="_ingress_789545 navds-body-long navds-body-long--large"
        >
          henvisning.foedselsdato.body
        </p>
        <button
          class="_button_789545 navds-button navds-button--primary navds-button--medium"
          data-testid="card-button-primary"
          type="button"
        >
          <span
            class="navds-label"
          >
            henvisning.detaljert_kalkulator
          </span>
        </button>
        <button
          class="_button_789545 navds-button navds-button--secondary navds-button--medium"
          data-testid="card-button-secondary"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Henvisning  > rendrer henvisning til gjenlevende 1`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <section
        aria-live="polite"
        class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
        data-testid="henvisning"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          error.du_kan_ikke_bruke_enkel_kalkulator
        </h2>
        <p
          class="_ingress_789545 navds-body-long navds-body-long--large"
        >
          henvisning.gjenlevende.body
        </p>
        <button
          class="_button_789545 navds-button navds-button--primary navds-button--medium"
          data-testid="card-button-primary"
          type="button"
        >
          <span
            class="navds-label"
          >
            henvisning.detaljert_kalkulator
          </span>
        </button>
        <button
          class="_button_789545 navds-button navds-button--secondary navds-button--medium"
          data-testid="card-button-secondary"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Henvisning  > rendrer henvisning til ufoeretrygd 1`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <section
        aria-live="polite"
        class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
        data-testid="henvisning"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          error.du_kan_ikke_bruke_enkel_kalkulator
        </h2>
        <p
          class="_ingress_789545 navds-body-long navds-body-long--large"
        >
          henvisning.ufoeretrygd.body
        </p>
        <button
          class="_button_789545 navds-button navds-button--primary navds-button--medium"
          data-testid="card-button-primary"
          type="button"
        >
          <span
            class="navds-label"
          >
            henvisning.detaljert_kalkulator
          </span>
        </button>
        <button
          class="_button_789545 navds-button navds-button--secondary navds-button--medium"
          data-testid="card-button-secondary"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Henvisning  > rendrer henvisning til utland 1`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <section
        aria-live="polite"
        class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
        data-testid="henvisning"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          error.du_kan_ikke_bruke_enkel_kalkulator
        </h2>
        <p
          class="_ingress_789545 navds-body-long navds-body-long--large"
        >
          henvisning.utland.body
        </p>
        <button
          class="_button_789545 navds-button navds-button--primary navds-button--medium"
          data-testid="card-button-primary"
          type="button"
        >
          <span
            class="navds-label"
          >
            henvisning.detaljert_kalkulator
          </span>
        </button>
        <button
          class="_button_789545 navds-button navds-button--secondary navds-button--medium"
          data-testid="card-button-secondary"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
